[package]
name = "ason"
version = "2.0.0"
edition = "2024"

license = "MPL-2.0"
description = "ASON is a data format that evolved from JSON, supports strong data types."
homepage = "https://github.com/hemashushu/ason"
repository = "https://github.com/hemashushu/ason"
keywords = ["ason", "serde"]
categories = ["encoding", "parser-implementations"]

[dependencies]
chrono = "0.4.43"
hexfloat2 = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
