[package]
name = "ason"
version = "2.0.1"
edition = "2024"

license = "MPL-2.0"
description = "ASON is a data serialization format that evolved from JSON, featuring strong numeric typing and native support for enumeration types."
homepage = "https://github.com/hemashushu/ason"
repository = "https://github.com/hemashushu/ason"
keywords = ["ason", "serde"]
categories = ["serde", "encoding", "parser-implementations"]

[dependencies]
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
hexfloat2 = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
